[package]
name = "paraloc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
